# DFT

./: README.md  pyproject.toml  qe_test_suite_details.txt  qe_test_suite_report.txt
examples/: hydrogen_molecule.py  silicon_diamond.py
pwdft/: __init__.py  basis.py  calculator.py  constants.py  crystal.py  eigensolver.py  ewald.py  forces.py  hamiltonian.py  kpoints.py  lattice.py  mixing.py  pseudopotential.py  scf.py  xc.py
tests/: test_basis.py  test_ewald.py  test_hamiltonian.py  test_kpoints.py  test_lattice.py  test_pseudopotential.py  test_qe_suite.py  test_scf.py  test_xc.py
